--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polynode-boilerplate-webserver",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Webserver boilerplate for Polynode",
   "main": "build/index.js",
   "scripts": {
@@ -33,6 +33,10 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/register": "^7.7.4",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-closure-elimination": "^1.3.0",
+    "babel-plugin-groundskeeper-willie": "^1.3.2",
+    "babel-plugin-transform-named-imports": "^2.0.1",
+    "babel-preset-optimizations": "^2.0.0",
     "eslint": "^6.3.0",
     "eslint-config-prettier": "^6.2.0",
     "eslint-config-standard": "^14.1.0",
@@ -44,6 +48,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.1",
+    "fast-async": "^6.3.8",
     "flow-bin": "^0.107.0",
     "flow-typed": "^2.6.2",
     "prettier": "1.18.2"
