--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "babel src/ -d build/",
     "prepublish": "npm run build",
+    "postinstall": "flow-typed install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
