--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build/index.js",
   "scripts": {
     "build": "babel src/ -d build/",
-    "prepublish": "flow-typed install && npm run build"
+    "prepublish": "flow-typed install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
